--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "backtester_rs"
-version = "0.1.0"
+name = "backtest_rs"
+version = "0.0.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "backtester_rs"
-crate-type = ["cdylib"]
+name = "backtest_rs"
+crate-type = ["cdylib", "rlib"]
+path = "src/lib.rs"
 
 [dependencies]
-pyo3 = "0.23.3"
-polars = { version = "*", features = ["json", "csv"] }
+pyo3 = { version="0.23.3", features = ["extension-module"] }
